Fixed overflowing issues with stats.astro

--- a/src/styles/graph.css
+++ b/src/styles/graph.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 100%;
 
     .ReactTags__tags {
         min-width: 70%;
@@ -19,6 +20,10 @@
 
     .ReactTags__selected {
         margin: 10px 5px;
+        padding: 10px 10px;
+        width: 700px;
+        overflow-x: auto;
+        white-space: nowrap;
 
         .ReactTags__tag {
             margin: 3px;
@@ -104,4 +109,5 @@
     margin-top: 10px;
     width: 100%;
     height: 50%;
+    text-overflow: ellipsis;
 }
